--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "client",
+  "homepage": "./",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5000",
@@ -34,7 +35,6 @@
   "browserslist": {
     "production": [
       ">0.2%",
-      "not dead",
       "not op_mini all"
     ],
     "development": [
