--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,1 @@
-PORT = 5000
-CONNECTION_URL = mongodb+srv://TestUser123:Jishnu_13720@cluster0.xng7e.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+CONNECTION = mongodb+srv://TestUser123:Jishnu_13720@cluster0.xng7e.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
