--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,6 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "moment": "^2.27.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "react-file-base64": "^1.0.3",
     "react-redux": "^7.1.3",
     "react-scripts": "3.4.1",
@@ -45,5 +43,9 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0"
+  },
+  "peerDependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
